# KiNet

./: .gitignore  CMakeLists.txt  KiNet.hpp  KiNet_linux.hpp  KiNet_windows.hpp  KimeNet.h  LICENSE  README.md  client.cpp  server.cpp
.github/workflows/: cmake_linux.yml
